新規チャット登録API途中まで
